# advanced-analytics-group-cw

./: README.md  __init__.py  main.py  pyproject.toml
common/: classes.py
handlers/: draw_solutions.py  handle_inline_args.py  handle_instances.py  handle_model_v1.py  handle_model_v2.py  handle_model_v3.py  inline_args.py  instances.py  model_v1.py  model_v3.py  solutions.py
